#INNOVATION-92 by magnify: Fixed boxlist spacing

--- a/sites/all/themes/cfia/scss/components/_itk-boxlist.scss
+++ b/sites/all/themes/cfia/scss/components/_itk-boxlist.scss
@@ -232,18 +232,12 @@ $boxlist-padding:                       1em;
 
     @include breakpoint($breakpoint-desk) {
       box-sizing: border-box;
+      margin-right: -1.5em;
+      margin-left: -1.5em;
+      padding-right: 1.5em;
+      padding-left: 1.5em;
 
       @include flex-basis(33%);
-
-      // Add padding left to all elements except the 1st and 4th
-      &:not(:nth-child(3n+1)) {
-        padding-left: 3em;
-      }
-
-      // Add padding right to all elements except the 3rd
-      &:not(:nth-child(3n)) {
-        padding-right: 3em;
-      }
     }
   }
 }
